fix custom interval widget overflow into date selector

--- a/web/css/timeline.css
+++ b/web/css/timeline.css
@@ -412,7 +412,6 @@ button:focus {
 
 .custom-interval-timescale-select-form-container {
   width: 100px;
-  height: 40px;
   color: #7890cd;
   opacity: 1;
   font-size: 16px;
